--- a/src/index.html
+++ b/src/index.html
@@ -24,19 +24,9 @@
         height: 400px;
         display: none;
       }
-      /* .map {
-        width: 100%;
-        height: 100%;
-        position: relative;
-      } */
     </style>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
-    <script src="./scripts/main.bundle.js"></script>
+    <script src="./main.bundle.js"></script>
   </head>
   <body>
-
-    <!-- <p>hello</p>
-    <div id="mapid" class="map"></div>   -->
-
   </body>
 </html>
